# Movie-Review-Sentiment

./: .coverage  Makefile  README.md  extract.py  pyproject.toml  setup.cfg  📁
.github/workflows/: cd.yml  ci.yml
.pytest_cache/v/cache/: nodeids
app/: streamlit_app.py
artifacts/logs/run/: run-api.ps1  run-streamlit.ps1
artifacts/logs/train/: events.out.tfevents.1779316705.LAPTOP-5C9S9SUK.3140.0.v2  events.out.tfevents.1779317523.LAPTOP-5C9S9SUK.29328.0.v2  events.out.tfevents.1779317577.LAPTOP-5C9S9SUK.32796.0.v2
artifacts/models/: tokenizer.pkl
configs/: default.yaml
docker/: Dockerfile.api  Dockerfile.app  docker-compose.yml
mlruns/0/: meta.yaml
mlruns/362341287422214431/: meta.yaml
mlruns/362341287422214431/07207e4508d44ba1bb0e39c9e29bd693/: meta.yaml
mlruns/362341287422214431/2c38aa89670845d79b15925144993c5e/: meta.yaml
mlruns/362341287422214431/64b9668c3d2448e8bcf101c1f536e4ba/: meta.yaml
mlruns/362341287422214431/65b885efd2dc4bf0a9f9421d64f0e4a6/: meta.yaml
mlruns/362341287422214431/d2744fa4bce842a2b3e5ae3cde732a2d/: meta.yaml
mlruns/362341287422214431/ffbd0d4ec6544b7cb17438945eba1f75/: meta.yaml
scripts/: train.py
skills/: recurmint (1).md
src/sentiment/: config.py  exceptions.py
src/sentiment/data/: dataset.py  preprocessing.py
src/sentiment/models/: base.py  factory.py  gru.py
src/sentiment/serving/: api.py  predictor.py  schemas.py
src/sentiment_gru.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_model.py  test_preprocessing.py
(+58 files in other folders)
