[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "sentiment-gru"
version     = "1.0.0"
description = "Production GRU sentiment analysis — IMDB"
requires-python = ">=3.10"
license     = { text = "MIT" }
authors     = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    "tensorflow>=2.14",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "pydantic>=2.4",
    "pydantic-settings>=2.0",
    "typer[all]>=0.9",
    "rich>=13.6",
    "mlflow>=2.8",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "httpx>=0.25",
    "streamlit>=1.28",
    "plotly>=5.18",
    "nltk>=3.8",
    "PyYAML>=6.0",
    "prometheus-client>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "httpx>=0.25",
    "mypy>=1.6",
    "ruff>=0.1",
    "pre-commit>=3.5",
    "faker>=20.0",
]

[project.scripts]
sentiment-train    = "scripts.train:app"
sentiment-evaluate = "scripts.evaluate:app"
sentiment-serve    = "sentiment.serving.api:start"

[tool.setuptools.packages.find]
where = ["src"]
